--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
   <a href="#services" class="bg-blue-800 px-8 py-4 rounded-full font-semibold text-white hover:bg-blue-700 transition">
     Book a Pickup
   </a>
-  <a href="#contact" class="border-2 border-blue-800 px-8 py-4 rounded-full font-semibold text-blue-800 hover:bg-blue-800 hover:text-white transition">
-    Get a Quote
+  <a href="#offers" class="border-2 border-blue-800 px-8 py-4 rounded-full font-semibold text-blue-800 hover:bg-blue-800 hover:text-white transition">
+    Get an Offer
   </a>
 </div>
 
